WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308319
Web Inspector: WebInspectorBackend::Show completion handler must be called
https://bugs.webkit.org/show_bug.cgi?id=308319
Summary
Web Inspector: WebInspectorBackend::Show completion handler must be called
Qianlang Chen
Reported
2026-02-20 11:17:54 PST
According to this, the completion handler for IPC messages must be called once:
https://github.com/the-chenergy/WebKit/blob/e2639ef69577f28d66dc711233148970ba221657/Source/WTF/wtf/CompletionHandler.h#L82
The listener for WebInspectorBackend::Show has an early return that bypasses calling the completion handler for that message:
https://github.com/WebKit/WebKit/blob/27241564f95710442bd89874714d41f33ca757b8/Source/WebKit/WebProcess/Inspector/WebInspectorBackend.cpp#L138
This was introduced in my work when I was not aware of this rule about completion handlers:
https://github.com/apple/WebKit/pull/2291/changes#diff-583ff833eb55165cc11e7d431d26e2bdf7e33656d50530df126e237c4637cc58R135-R142
This should technically trigger that assertion failure on a debug build
Attachments
Add attachment
proposed patch, testcase, etc.
Qianlang Chen
Comment 1
2026-02-20 11:54:06 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59108
EWS
Comment 2
2026-02-20 20:26:41 PST
Committed
307957@main
(ff561b3a23fe): <
https://commits.webkit.org/307957@main
> Reviewed commits have been landed. Closing PR #59108 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-02-20 20:27:12 PST
<
rdar://problem/170854287
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug