Web Inspector: WebInspectorBackend::Show completion handler must be called https://bugs.webkit.org/show_bug.cgi?id=308319

Reviewed by Devin Rousso and BJ Burg.

Add a success parameter to the handler of the Show message, to match the
requirement that CompletionHandler must always be called.

* Source/WebKit/UIProcess/Inspector/WebInspectorUIProxy.cpp:
(WebKit::WebInspectorUIProxy::connect):
* Source/WebKit/WebProcess/Inspector/WebInspectorBackend.cpp:
(WebKit::WebInspectorBackend::show):
* Source/WebKit/WebProcess/Inspector/WebInspectorBackend.h:
* Source/WebKit/WebProcess/Inspector/WebInspectorBackend.messages.in:

Canonical link: https://commits.webkit.org/307957@main