Source/WebKit/WebProcess/Inspector/WebInspectorBackend.cpp
@@ -132,13 +132,15 @@ void WebInspectorBackend::whenFrontendConnectionEstablished(Function<void(IPC::C
 }
 
 // Called by WebInspectorBackend messages
-void WebInspectorBackend::show(CompletionHandler<void()>&& completionHandler)
+void WebInspectorBackend::show(CompletionHandler<void(bool success)>&& completionHandler)
 {
-    if (!m_page->corePage())
+    if (!m_page->corePage()) {
+        completionHandler(false);
         return;
+    }
 
     m_page->corePage()->inspectorController().show();
-    completionHandler();
+    completionHandler(true);
 }
 
 void WebInspectorBackend::close()
